--- a/Hahn.ApplicationProcess.February2021.Web/appsettings.json
+++ b/Hahn.ApplicationProcess.February2021.Web/appsettings.json
@@ -1,10 +1,25 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "AllowedHosts": "*",
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*"
+      "Override": {
+        "Microsoft": "Information",
+        "System": "Error"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/log.txt",
+          "outputTemplate": "{Timestamp:G} {Message}{NewLine:1}{Exception:1}"
+        }
+
+      }
+    ]
+  }
 }
