--- a/Hahn.ApplicationProcess.February2021.Frontend/package.json
+++ b/Hahn.ApplicationProcess.February2021.Frontend/package.json
@@ -9,7 +9,12 @@
   "license": "MIT",
   "dependencies": {
     "aurelia-animator-css": "^1.0.4",
-    "aurelia-bootstrapper": "^2.3.3"
+    "aurelia-bootstrapper": "^2.3.3",
+    "aurelia-fetch-client": "^1.8.2",
+    "aurelia-http-client": "^1.3.1",
+    "bootstrap": "^4.6.0",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1"
   },
   "devDependencies": {
     "@types/jest": "^26.0.21",
