--- a/Hahn.ApplicationProcess.February2021.Frontend/package.json
+++ b/Hahn.ApplicationProcess.February2021.Frontend/package.json
@@ -13,6 +13,7 @@
     "aurelia-dialog": "^2.0.0",
     "aurelia-fetch-client": "^1.8.2",
     "aurelia-http-client": "^1.3.1",
+    "aurelia-validation": "^2.0.0-rc2",
     "bootstrap": "^4.6.0",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1"
